tests/invalid/sorted_unsupported_type/main.py
xs: list[str] = ["b", "a", "c"]
ys: list[str] = sorted(xs)
